fixed word-wrapping in popups

--- a/web/wiki_theme/hexdump.css
+++ b/web/wiki_theme/hexdump.css
@@ -37,6 +37,7 @@
 	z-index: 100;
 	font-family: Verdana;
 	margin: 0.2em 0.4em;
+	white-space: normal;
 }
 
 
